--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(ggplot2,theme_light)
 importFrom(ggplot2,xlab)
 importFrom(lubridate,as_date)
 importFrom(purrr,map)
-importFrom(purrr,map2)
 importFrom(purrr,pmap)
+importFrom(purrr,walk)
+importFrom(purrr,walk2)
 importFrom(tibble,tibble)
