--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,23 @@
 Package: discoverr
-Title: What the Package Does (One Line, Title Case)
+Title: Automated Data Discovery
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Edoardo",
+           family = "Oliveri",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "edoardo.oliveri91@gmail.com")
+Description: Univariate andbivariate plots.
 License: GPL-3
 Suggests: 
-    testthat
+    testthat,
+    ggfancy
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.1
+Imports: 
+    ggplot2,
+    dplyr,
+    lubridate,
+    purrr,
+    tibble
