--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ S3method(plot_var,numeric)
 export(.plot_2var)
 export(.plot_2var.character)
 export(.plot_2var.numeric)
-export(check_2var)
 export(plot_2var)
 export(plot_bar)
 export(plot_boxplot)
@@ -52,8 +51,10 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_light)
 importFrom(ggplot2,xlab)
 importFrom(lubridate,as_date)
+importFrom(purrr,compact)
+importFrom(purrr,is_empty)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,walk)
-importFrom(purrr,walk2)
 importFrom(tibble,tibble)
