edit chr handling
now it handles in a unique group low frequency modalities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(plot_line)
 export(plot_scatter)
 export(plot_var)
 importFrom(dplyr,count)
+importFrom(forcats,fct_lump)
 importFrom(ggfancy,plot_pareto)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
